src/objects/kucun__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <formula>Field7__c  +  Field9__c  +  Field8__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>现存数量（总）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>香港库现存数量</label>
        <summarizedField>stock__c.Field5__c</summarizedField>
        <summaryFilterItems>
            <field>stock__c.warehouse__c</field>
            <operation>equals</operation>
            <value>香港库</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>stock__c.state__c</field>
            <operation>equals</operation>
            <value>新品库</value>
        </summaryFilterItems>
        <summaryForeignKey>stock__c.Field2__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <inlineHelpText>不返厂的不合格品备件</inlineHelpText>
        <label>损耗库存量（广州）</label>
        <summarizedField>stock__c.Field5__c</summarizedField>
        <summaryFilterItems>
            <field>stock__c.warehouse__c</field>
            <operation>equals</operation>
            <value>广州库</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>stock__c.state__c</field>
            <operation>equals</operation>
            <value>损耗库</value>
        </summaryFilterItems>
        <summaryForeignKey>stock__c.Field2__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>库存</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field4__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>库存</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>库存</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>